--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,9 +5,11 @@ on:
   push:
     paths-ignore:
       - '**.md'
+      - '.cirrus.yml'
   pull_request:
     paths-ignore:
       - '**.md'
+      - '.cirrus.yml'
 
 jobs:
   build:
