Remove lunar (EOL) and add noble instead
Signed-off-by: Sergio Arroutbi <sarroutb@redhat.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           - debian:latest
           - ubuntu:latest
           - ubuntu:rolling
-          - ubuntu:lunar
+          - ubuntu:noble
           - ubuntu:jammy
           - ubuntu:focal
         stable: [true]
